# cuda

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  create-bindings.sh  kernel.rs
ci/: install.sh  script.sh
design/: single-source.md
examples/: add.rs  gray.cu  gray.rs  memcpy.rs  query.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
src/: compile.rs  lib.rs  ll.rs  nvcc.rs
src/driver/: ll.rs  mod.rs
tests/: add.cu  add.rs  memcpy.cu  memcpy.rs
uxx/: Cargo.toml  README.md
uxx/src/: lib.rs
uxx/tests/: arithmetic.rs  checked.rs  debug_assertions.rs
