[package]
name = "cuda"
version = "0.0.0"
authors = ["Jorge Aparicio <japaricious@gmail.com>"]

[dependencies]
libc = "*"
tempdir = "*"

[dev-dependencies]
rand = "*"
time = "*"

[dependencies.bindgen_plugin]
git = "https://github.com/japaric/rust-bindgen"
branch = "plugin"

[dependencies.cast]
git = "https://github.com/japaric/cast.rs"

[dev-dependencies.image]
git = "https://github.com/PistonDevelopers/image"
